--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-react",
+  "name": "boilerplate",
   "version": "1.0.0",
   "description": "Simple react app",
   "main": "index.js",
@@ -14,10 +14,11 @@
     "react-dom": "^0.14.7"
   },
   "devDependencies": {
-    "babel-core": "^6.5.1",
-    "babel-loader": "^6.2.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.24.1",
     "webpack": "^1.12.13"
   }
 }
