--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-plugin-react": "^7.4.0",
     "foundation-sites": "^6.2.0",
     "jquery": "^2.2.1",
+    "node-sass": "^3.13.1",
+    "sass-loader": "^3.2.3",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13"
